--- a/scheduler/tasks/exporter-task/src/main/resources/application.yml
+++ b/scheduler/tasks/exporter-task/src/main/resources/application.yml
@@ -20,3 +20,5 @@ spring:
     mongodb:
       database: # Mongo Database Name
       uri: # Mongo Database connection URL
+  main:
+    web-application-type: none
