--- a/submission/submission-webapp/src/itest/resources/application_base.yml
+++ b/submission/submission-webapp/src/itest/resources/application_base.yml
@@ -1,6 +1,10 @@
 logging:
   level:
     root: info
+    org.springframework.boot.context.properties.bind: trace
+    org.springframework.boot.context.properties.source: trace
+
+debug: true
 
 spring:
   datasource:
@@ -9,7 +13,6 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      use-new-id-generator-mappings: false
 
   servlet:
     multipart:
@@ -28,12 +31,8 @@ spring:
 
 app:
   processId: Biostudies-Itest
-  asyncMode: false
   retrySubmission: false
-  submissionPath:
-  ftpPath:
-  tempDirPath:
-  requestFilesPath:
+  asyncMode: false
   instanceBaseUrl: http://localhost:8080
   consumers: 1
   maxConsumers: 2
