core review changes

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -47,6 +47,7 @@ server:
   tomcat:
     max-http-form-post-size: 50MB
     max-swallow-size: 50MB
+    max-part-count: 2000 # Mostly for PMC pipeline that trigger many submission processing all together with files.
 
 logging:
   file:
