BIOSTD-279: Upgrade to latest Spring boot 3.x version (#978)
https://embl.atlassian.net/browse/BIOSTD-279
- updated to spring 3.5

--- a/submission/submission-webapp/src/itest/resources/application_base.yml
+++ b/submission/submission-webapp/src/itest/resources/application_base.yml
@@ -2,6 +2,10 @@ logging:
   level:
     root: info
 
+server:
+  tomcat:
+    max-part-count: 2000
+
 spring:
   datasource:
   jpa:
@@ -9,7 +13,6 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      use-new-id-generator-mappings: false
 
   servlet:
     multipart:
@@ -28,12 +31,8 @@ spring:
 
 app:
   processId: Biostudies-Itest
-  asyncMode: false
   retrySubmission: false
-  submissionPath:
-  ftpPath:
-  tempDirPath:
-  requestFilesPath:
+  asyncMode: false
   instanceBaseUrl: http://localhost:8080
   consumers: 1
   maxConsumers: 2
