--- a/docs/api/BioStudiesInternalAPI.yaml
+++ b/docs/api/BioStudiesInternalAPI.yaml
@@ -91,12 +91,12 @@ paths:
   /submissions/ftp/generate:
     $ref: 'ftp/GenerateFtpLinks.yaml'
 
-  /stats:
-    $ref: 'stats/operations/StatsOperations.yaml'
   /stats/{type}:
     $ref: 'stats/operations/StatsOperationsByKey.yaml'
   /stats/{type}/{accNo}:
     $ref: 'stats/operations/GetSubmissionStatsByType.yaml'
+  /stats/submission/{accNo}:
+    $ref: 'stats/operations/GetSubmissionStatsByAccNo.yaml'
   /stats/{type}/increment:
     $ref: 'stats/operations/IncrementStats.yaml'
 
