BIOSTD-57: Move DOI Registration To Post-Process Stage
- Move DOI registration to the post process stage
- Add retry capabilities for the DOI registration
- Remove unnecessary tests

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -172,3 +172,8 @@ app:
     email: # E-Mail to get the DOI processing notifications
     user: # User for the DOI service
     password: # Password for the DOI service
+    retry:
+      maxAttempts: # Maximum retry attempts
+      initialInterval: # Initial waiting interval time in ms
+      multiplier: # Multiplier for the waiting interval
+      maxInterval: # Maximum interval duration
