--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image: gradle:8.7-jdk17
 services:
-  - docker:dind
+  - docker:28.5.2-dind
 variables:
   DOCKER_HOST: "tcp://docker:2375"
   DOCKER_DRIVER: overlay2
